--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -84,6 +84,7 @@ password.password=Password :
 password.confirm=Confirm :
 
 exception.error_data=Data Validation Error
+exception.user.updateRestriction=Change Admin/User is forbidden
 
 error.appError=Application error
 error.dataNotFound=Data not found
